# SingSong

./: .gitignore  LICENSE  README.md  setup.cfg
SingSong/: __init__.py
SingSong/DBschema/: schema.sql
SingSong/Database/: __init__.py
SingSong/auth/: db_conn.py  validate.py
SingSong/main/: __init__.py
SingSong/profile/: __init__.py  db_conn.py  forms.py  views.py
SingSong/static/: in_fo.css
SingSong/templates/: email_confirm.txt  index.html  log_in.html  reg_index.html
SingSong/templates/template_elem/: header.html
app_SingSong/: config.py  requirements.txt
app_SingSong/SingSong/: __init__.py  email.py
app_SingSong/SingSong.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
app_SingSong/SingSong/Database/: Database_init.py
app_SingSong/SingSong/auth/: __init__.py  forms.py  views.py
app_SingSong/SingSong/main/: views.py
app_SingSong/SingSong/profile/: db_conn.py  validate.py
app_SingSong/SingSong/static/JS/: profile.js
app_SingSong/SingSong/static/upload_song/: Hi
app_SingSong/SingSong/templates/: email_confirm.html  in_fo.html  template.html
app_SingSong/SingSong/templates/template_elem/: head.html
