[metadata]
name = SingSong
version = 0.0.1
author = Satstef
author_email = singsong@gmail.com
description = A way to store and listen to your music
long_description = file: README.md
long_description_content_type = text/markdown
url =
project_urls =

classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Flask

[options]
package_dir =
    = app_SingSong
packages = find:
python_requires = >=3.6

[options.packages.find]
where = app_SingSong
